Prevent testimonial text cut off.

--- a/app/home/testimonial/testimonial.module.scss
+++ b/app/home/testimonial/testimonial.module.scss
@@ -319,7 +319,6 @@
   margin: 0;
   margin-bottom: var(--space-2xl);
   width: 80%;
-  overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 7;
   -webkit-box-orient: vertical;
